kubernetes/local/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: registry.hub.docker.com/flolu/cents-ideas_frontend:0.3.2
---
apiVersion: v1
kind: Service
metadata:
  name: cents-ideas-frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 4000
      nodePort: 30001
  type: NodePort
